--- a/mental-health-wellness-app/package.json
+++ b/mental-health-wellness-app/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.5",
+    "cors": "^2.8.6",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
