--- a/mental-health-wellness-app/package.json
+++ b/mental-health-wellness-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://ctrljerome.github.io/lab5",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
@@ -10,6 +11,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
+    "gh-pages": "^6.3.0",
     "prettier": "3.7.4",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5"
