--- a/crudapi_mysql_ai/package.json
+++ b/crudapi_mysql_ai/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "api-server",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "db.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "axios": "^1.13.4",
     "cors": "^2.8.6",
@@ -6,23 +13,9 @@
     "express": "^5.2.1",
     "mysql2": "^3.16.3"
   },
-  "name": "api-server",
-  "version": "1.0.0",
-  "main": "db.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ctrljerome/crudapi_mysql_ai.git"
+    "url": "https://github.com/ctrljerome/crudapi_mysql_ai.git"
   },
-  "bugs": {
-    "url": "https://github.com/ctrljerome/crudapi_mysql_ai/issues"
-  },
-  "homepage": "https://github.com/ctrljerome/crudapi_mysql_ai#readme",
-  "description": ""
+  "license": "ISC"
 }
